# hackrf_emitter

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json  start.sh  test_backend.py  test_drone_video_jamming.py  test_elrs_jamming.py  test_enhanced_workflows.py  test_max_power_summary.py  test_raw_energy_workflows.py  test_signal_cache.py  test_universal_cache.py
backend/: README.md  __init__.py  app.py  initialize_cache.py  requirements.txt  run_cache_init.sh
backend/config/: settings.json
backend/rf_workflows/: __init__.py  adsb_protocol.py  crc16_python.py  drone_video_jamming_protocol.py  elrs_jamming_protocol.py  elrs_protocol.py  enhanced_workflows.py  gps_protocol.py  hackrf_controller.py  modulation_workflows.py  raw_energy_protocol.py  universal_signal_cache.py  wideband_signal_cache.py
backend/utils/: config_manager.py  safety_manager.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  index.css  index.tsx
frontend/src/components/: ErrorBoundary.tsx  Layout.tsx  WorkflowForm.tsx
frontend/src/contexts/: SocketContext.tsx
frontend/src/pages/: Dashboard.tsx  DeviceInfo.tsx  Library.tsx  Settings.tsx  Workflows.tsx
frontend/src/services/: api.ts
