[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hackrf_emitter"
version = "1.0.0"
description = "HackRF RF Signal Emitter with comprehensive workflow system"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "flask>=2.0.0",
    "flask-socketio>=5.0.0",
    "python-socketio>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "black>=21.0.0",
    "pylint>=2.0.0",
]

[tool.setuptools.packages.find]
where = ["backend"]

[tool.setuptools.package-dir]
"" = "backend"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
]

[tool.pyright]
include = ["backend", "test_*.py"]
extraPaths = ["backend"]
pythonVersion = "3.8" 